# peko-agent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  Makefile  NOTICE.md  QUICKSTART.md  README.md  SECURITY.md
.github/workflows/: release.yml
android/peko-overlay/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/peko-overlay/app/: build.gradle.kts  proguard-rules.pro
android/peko-overlay/app/src/main/: AndroidManifest.xml
android/peko-overlay/app/src/main/res/values/: colors.xml  (+1 more)
android/peko-sms-shim/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/peko-sms-shim/app/: build.gradle.kts
android/peko-sms-shim/app/src/main/: AndroidManifest.xml
config/: config.android.toml  config.example.toml  config.mac.toml
crates/peko-config/: Cargo.toml
crates/peko-config/src/: device_profile.rs  lib.rs
crates/peko-core/: Cargo.toml
crates/peko-core/src/: background.rs  brain.rs  budget.rs  call_pipeline.rs  compressor.rs  cron.rs  curiosity.rs  gardener.rs  goal.rs  hardware.rs  lib.rs  life_loop.rs  mcp.rs  mem_monitor.rs  memory.rs  message.rs  motivation.rs  notebook.rs  prompt.rs  reflector.rs  runtime.rs  runtime_tests.rs  scheduler.rs  session.rs  skills.rs  task_queue.rs  tool.rs  user_model.rs
crates/peko-core/tests/: life_loop_e2e.rs
crates/peko-hal/: Cargo.toml
crates/peko-hal/src/: accessibility.rs  audio.rs  battery.rs  display.rs  display_info.rs  framebuffer.rs  input.rs  lib.rs  light_prox.rs  modem.rs  package_manager.rs  sensors.rs  sensors_dumpsys.rs  uinput.rs  wifi.rs
crates/peko-llm/: Cargo.toml
crates/peko-llm-daemon/: CMakeLists.txt  README.md  build-android.sh  deploy-test.sh
crates/peko-llm-daemon/src/: chat_template.cpp  chat_template.h  config.h  http_server.cpp  http_server.h  llm_session.cpp  llm_session.h  main.cpp  openai_api.cpp  openai_api.h
crates/peko-llm/examples/: smoke_test.rs
crates/peko-llm/src/: candle_backend.rs  engine.rs  lib.rs  provider.rs
crates/peko-renderer/: Cargo.toml
crates/peko-renderer/src/: blit.rs  drm.rs  font.rs  lib.rs
crates/peko-stt/: Cargo.toml
crates/peko-stt-bin/: CMakeLists.txt  build-android.sh
crates/peko-stt/src/: lib.rs
crates/peko-tools-android/: Cargo.toml
crates/peko-tools-android/src/: audio_pcm_tool.rs  audio_tool.rs  bg_tool.rs  brain_tool.rs  bridge_client.rs  call.rs  call_framework.rs  camera_tool.rs  delegate_tool.rs  draw_tool.rs  events_tool.rs  filesystem.rs  gps_tool.rs  key_event.rs  lib.rs  memory_tool.rs  ocr_tool.rs  package_manager_tool.rs  plan_tool.rs  research_tool.rs  screen_state.rs  screenshot.rs  sensors_tool.rs  shell.rs  skills_tool.rs  sms.rs  sms_framework.rs  stt_tool.rs  telephony_tool.rs  tests.rs  text_input.rs  touch.rs  ui_automation.rs  unlock_device.rs  web_tool.rs  wifi_tool.rs
crates/peko-transport/: Cargo.toml
crates/peko-transport/src/: anthropic.rs  chain.rs  lib.rs  openai_compat.rs  provider.rs  provider_tests.rs  sse.rs  stream.rs  unix_socket.rs
device-profiles/: OnePlus6T-lineage_fajita-userdebug.toml  OnePlus6T-reference.toml  fajita-lineage-20.toml
docs/: 00-Home.md  01-Vision.md  AGENT_AS_OS_STATUS.md  CAPABILITY_MATRIX.md  Glossary.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.4.2.md  RELEASE_NOTES_v0.4.3.md  RELEASE_NOTES_v0.4.4.md  paper.md
docs/architecture/: Architecture-Overview.md  Boot-Sequence.md  Crate-Map.md  Curiosity-Learning-Backbone.md  Digital-Life.md  Dual-Brain.md  Full-Life-Roadmap.md  lane-a-boot.md  lane-a-sdm845-finding.md
docs/implementation/: Autonomy.md  Context-Compression.md  LLM-Providers.md  ReAct-Loop.md  SSE-Streaming.md  Safety-Model.md  Session-Persistence.md  Tool-System.md  hermes-hal.md  hermes-native-binary.md  peko-config.md  peko-core.md  peko-tools-android.md  peko-transport.md
docs/knowledge/: Android-Internals.md  Cross-Compilation.md  Linux-Kernel-Interfaces.md  Rust-On-Android.md  SELinux-Policy.md  Screen-Capture.md  Telephony-AT-Commands.md  Touch-Input-System.md  Why-Rust.md
docs/research/: Agent-Benchmarks.md  Computer-Use-Agents.md  Mobile-Agents.md  ReAct-Paper.md  Related-Work-Overview.md
docs/roadmap/: Challenges-And-Risks.md  Device-Requirements.md  Gap-Analysis.md  Implementation-Roadmap.md  Phase-1-Foundation.md  Phase-2-Transport.md  Phase-3-Hardware.md  Phase-4-Tools.md  Phase-5-Integration.md  Phase-6-Android-Deploy.md  Phase-7-Learning-Loop.md  Phase-8-Messaging.md  Phase-9-Scheduler-MCP.md  Possibilities.md  Testing-Strategy.md
emulator/: deploy_test.sh  patch_and_boot.sh  setup_avd.sh  start.sh  stop.sh
magisk/: build-module.sh
magisk/peko-module/: customize.sh  lane-a-toggle.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh
magisk/peko-module/system/etc/peko/: config.toml
magisk/peko-module/system/etc/peko/skills/: voice_loop.md
magisk/peko-module/system/etc/permissions/: privapp-permissions-peko.xml
magisk/peko-module/system/priv-app/PekoOverlay/: PekoOverlay.apk
rom/agent-os/: README.md
rom/agent-os/ramdisk/: default.prop  init.peko.rc  init.rc
rom/agent-os/scripts/: build_rom.sh  extract_boot.sh  extract_from_stock.sh
rom/init/: peko-agent.rc  peko-frameworkless.rc
rom/layout/: Android.bp  device_peko.mk  system_layout.txt
rom/lineage-fajita/: Android.bp  Dockerfile  boot_tuning.mk  build.sh  docker-compose.yml  local_manifest.xml  peko-performance.rc  peko_overlay.mk  remove_apps.mk  vendorsetup.sh
rom/sepolicy/: file_contexts  peko_agent.te  peko_agent_socket.te  peko_prop.te  property_contexts
scripts/: boot_test.sh  build-tesseract-android.sh  collect_selinux_denials.sh  deploy.sh  download-whisper-model.sh  voice-loop-test.sh
selinux/: file_contexts  peko_agent.te
src/: main.rs
src/telegram/: bot.rs  mod.rs
src/web/: api.rs  device.rs  mod.rs  ui.rs
tests/device-test/: _probe.sh  _probe2.sh  _probe3.sh  _probe4.sh  dumpsys_sensorservice_OnePlus6T.txt  install-tesseract.sh  phase1.sh  phase2.sh  phase3.sh  phase4.sh  phase8-lane-a-blit.sh  phase9-drm.sh  run-all.sh
(+27 files in other folders)
