[workspace]
resolver = "2"
members = [
    "crates/peko-config",
    "crates/peko-transport",
    "crates/peko-core",
    "crates/peko-hal",
    "crates/peko-tools-android",
    "crates/peko-llm",
    ".",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

peko-config = { path = "crates/peko-config" }
peko-transport = { path = "crates/peko-transport" }
peko-core = { path = "crates/peko-core" }
peko-hal = { path = "crates/peko-hal" }
peko-tools-android = { path = "crates/peko-tools-android" }
peko-llm = { path = "crates/peko-llm" }

[package]
name = "peko-agent"
version.workspace = true
edition.workspace = true

[dependencies]
peko-config.workspace = true
peko-transport.workspace = true
peko-core.workspace = true
peko-hal.workspace = true
peko-tools-android.workspace = true
peko-llm.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
async-stream = "0.3"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
