[package]
name = "peko-core"
version.workspace = true
edition.workspace = true

[dependencies]
peko-transport.workspace = true
peko-config.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
