[package]
name = "peko-llm"
version.workspace = true
edition.workspace = true

[features]
default = ["candle"]
# Pure Rust backend via candle — cross-compiles to Android ARM64 with no C deps
candle = ["candle-core", "candle-nn", "candle-transformers", "tokenizers"]
# Optional: download tokenizers from HuggingFace Hub (not needed on Android)
hf-hub = ["dep:hf-hub"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
peko-transport.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
tokio-stream = "0.1"

# Candle — pure Rust ML inference
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["unstable_wasm"] }
hf-hub = { version = "0.4", optional = true, default-features = false, features = ["tokio"] }
