[package]
name = "peko-tools-android"
version.workspace = true
edition.workspace = true

[dependencies]
peko-core.workspace = true
peko-config.workspace = true
peko-hal.workspace = true
peko-renderer.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
